--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,53 @@
             </div>
           </div>
 
-          <!---->
+          <!--学生之区-->
+          <div class="row">
+            <!--Laura-->
+            <div class="col-sm-12 col-md-4">
+              <div class="thumbnail">
+                <img src="images/Laura.jpg">
+                <div class="caption">
+                  <h3>Laura</h3>
+                  <p>
+                    记得刚开始来自各个地区的人都羞答答地介绍着自己，到后来大胆着展示着连夜完成的presentation；刚开始大家还非常拘谨，到后来都称兄道弟，依依不舍地离别；还有刚开始像老师一样的mentor，到最后唱K游玩闹成一片...如果说我带着太高的期望去参加这次实习，那么我收获的是真实，一次真实的培训，
+                  </p>
+                  <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                </div>
+              </div>
+            </div>
+              <!--Jessie-->
+              <div class="col-sm-12 col-md-4">
+              <div class="thumbnail">
+                <img src="images/Jessie.jpg">
+                <div class="caption">
+                  <h3>Laura</h3>
+                  <p>
+                    非常有幸的，我得以参加腾飞策划的PFP rogram项目，我寒假在香港AIA（美国友邦）进行为期七天的金融行业研习。在这七天酸甜苦辣的交融里，我的收获难以用言语形容。“一场旅行，目的地并不是最重要的，重要的是一路同行的人。希望这段旅程能与你同行，会成为我今后最美好的回忆.
+                    两位导师必定是七天
+                  </p>
+                  <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                </div>
+              </div>
+            </div>
+             <!--Echo-->
+              <div class="col-sm-12 col-md-4">
+              <div class="thumbnail">
+                <img src="images/Echo.jpg">
+                <div class="caption">
+                  <h3>Echo</h3>
+                  <p>
+                    说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
+                    在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
+
+                  </p>
+                  <p><a href="#" class="btn btn-primary" role="button">详情</a></p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
           <!--真诚的友谊-->
           <div class="intro">
             <p class="intro-title">真诚的友谊</p>
