加入栏目头

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,9 @@
     <!--内容区-->
     <div class="content">
       <div class="container inner">
+         <div class="section">
+            <h3>Company & Project</h3>
+          </div>
           <div class="row">
             <!--左边 公司简介-->
             <div class="col-md-6">
@@ -88,15 +91,18 @@
                 </div>
             </div>
           </div>
-
+  
           <!--学生之区-->
+          <div class="section">
+            <h3>Voice of Students</h3>
+          </div>
           <div class="row">
              <!--Echo-->
               <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                   <img class="img-responsive" src="images/Echo.jpg">
                   <div class="caption">
-                    <h3>Echo<small>【学生之声】</small></h3>
+                    <h3>Echo</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -111,7 +117,7 @@
                 <div class="thumbnail">
                   <img src="images/Echo.jpg">
                   <div class="caption">
-                    <h3>Echo<small>【学生之声】</small></h3>
+                    <h3>Echo</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -126,7 +132,7 @@
                 <div class="thumbnail">
                   <img src="images/Echo.jpg">
                   <div class="caption">
-                    <h3>Echo<small>【学生之声】</small></h3>
+                    <h3>Echo</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -142,7 +148,7 @@
                 <div class="thumbnail">
                   <img src="images/Echo.jpg">
                   <div class="caption">
-                    <h3>Echo<small>【学生之声】</small></h3>
+                    <h3>Echo</h3>
                     <p>
                       说起来去年寒假到香港参加PFP这个项目才是真正促进我努力争取香港理工大学exchange的最大动力。
                       在项目过程中我真切地感受到了香港给我的第一次的气息。也许是学员们和导师们认真的态度，也许是一起努力做项目漫长困顿的深夜，也许是在项目讨论中争吵起来的我们。让我顿时有了这种想法：真的很想留在这个繁忙又有点儿拥挤却很有味道的地方感受在这儿的人们是如何生活如何学习如何工作又或者是 -- 如何生存的。
@@ -154,8 +160,11 @@
              </div>
 
           </div>
-          <!--新闻区-->
 
+          <!--新闻区-->
+          <div class="section">
+            <h3>Breaking News</h3>
+          </div>
           <div class="row">
             <!--新闻1-->
               <div class="col-sm-12 col-md-6">
@@ -248,6 +257,10 @@
                     </div>
                   </article>
               </div>
+          </div>
+
+           <div class="section">
+            <h3>Join us</h3>
           </div>
           <!--真诚的友谊-->
           <div class="intro">
