--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                           <li><a href="">留学申请</a></li>
                          <li><a href="">联系我们</a></li>
                          <li><a href="">申请指南</a></li>
-                         <li><a class="pal-btn" href="">在线申请</a></li>
+                         <li><a class="navbar-pal-btn" href="">在线申请</a></li>
                       </ul>
                  </div>
             </div>
