添加项目概况页面

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="#">首页</a></li>
-                         <li><a href="">项目内容</a></li>
+                         <li><a href="">项目概况</a></li>
                          <li><a href="">游学</a></li>
                          <li><a href="">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
@@ -56,7 +56,7 @@
     <!--大图区-->
     <div class="bgpic">
         <div class="row">
-          <img class="hidden-xs col-md-12"src="images/bg-1.jpg" alt="">
+          <img class="hidden-xs hidden-sm col-md-12"src="images/bg-1.jpg" alt="">
         </div>
     </div>
 
@@ -217,29 +217,29 @@
           </div>
           <!--真诚的友谊-->
           <div class="intro">
-            <p class="intro-title">真诚的友谊</p>
-            <p class="intro-body">
+            <h3>真诚的友谊</h3>
+            <p>
               在这里，你可以遇见来自全国各地不同高校、不同专业的学界精英；在这里，你将收获一份又一份真诚的友谊。他们和你一样，充满梦想并孜孜不倦地追求，他们会让你看到更多元的世界。在为期一周的日日夜夜里，你们将穿梭在香港这样一个国际金融大都市之中，一起学习、一起工作、一起生活，共同分担恼人的挫折，也一同享受成功的喜悦，从而培养出真挚的感情。即使项目结束，这样情谊也将持续下去。
             </p>
           </div>
 
           <!--高端的人脉-->
            <div class="intro ">
-            <p class="intro-title">高端的人脉</p>
-            <p class="intro-body">
+            <h3>高端的人脉</h3>
+            <p>
               每一位导师都是业界精英，每一位学员都是未来人才。一周的培训学习，不仅给予你知识，还将给予你无可估量的高端人脉。每当项目结束之后，导师与学员之间仍会保持联系，既可以为学员解答专业问题，也可以与学员一同分享生活的点滴，亦师亦友，认识他们会是你人生中珍贵的一笔财富。
             </p>
           </div>
           <!--综合能力“质“的提升-->
            <div class="intro">
-            <p class="intro-title">综合能力“质“的提升</p>
-            <p class="intro-body">
+            <h3>综合能力“质“的提升</h3>
+            <p>
               经过一周的培训，学员将通过前所未有的商业体验让自己的综合能力得到”质“的飞跃。无论你来自哪所学校，无论你的专业是什么，在这里，你就是一名商业人士。投资银行体验、商业策划书竞赛、五百强跨国企业研习等一系列培训项目，都将在短时间内全面提高学员的个人能力。
             </p>
           </div>
           <!--所获证书-->
            <div class="intro">
-            <p class="intro-title">所获证书</p>
+            <h3>所获证书</h3>
             <p class="intro-body">
               按照规定顺利完成项目之后，每位学员将获得实习证明证书，表现优异者将获得五百强企业高管推荐信和比赛获奖证书。以上证书都将为学员日后的求职和求学简历增色不少。
             </p>
