--- a/app/project.html
+++ b/app/project.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <!--项目内容-->
-                <div class="col-xs-12 col-md-8">
+                <div class="col-xs-12 col-md-12">
                     <!--项目内容-->
                     <div class="section">
                         <h3>项目内容</h3>
@@ -132,20 +132,40 @@
                         </p>
                     </div>
                 </div>
-                <!--内容导航-->
-                <div class="col-xs-12 col-md-4">
-                    <div class="sidebar hidden-xs hidden-sm">
-                          <h3 href="#">项目内容</h3>
-                          <ul>
-                                <li><a href="#">项目简介</a></li>
-                                <li><a href="#1">五百强跨国企业研习</a></li>
-                                <li><a href="#2">实战投资竞赛</a></li>
-                                <li><a href="#3">模拟求职workshop</a></li>
-                                <li><a href="#4">商业报告书竞赛</a></li>
-                                <li><a href="#5">在港学生分享会</a></li>
-                          </ul>
-                          <h3><a href="#7">项目优势</a></h3>
+                <!--项目优势-->
+                <div class="col-xs-12 col-md-12">
+                    <div class="section">
+                        <h3>项目优势</h3>
                     </div>
+                    <div class="intro">
+                      <h3>内部定制，与时俱进</h3>
+                      <p>
+                          PFP是由企业内部直接制定全方位的培训课程，导师全程跟陪。整个项目由腾飞资深HR顾问及香港金融名企高层顾问精心设计，每一期的项目结束后，项目顾问都会积累经验，不断地改善项目内容设置，与时俱进，并根据学员的不同背景和情况，为每一位学员量身打造合适的培训计划，一定让每位学员学有所得。
+                      </p>
+                    </div>
+                    <div class="intro">
+                      <h3>投资银行体验</h3>
+                      <p>
+                        在众多行业中，私人投资银行公认为门槛最高的行业之一，香港作为备受瞩目的金融都市，全球各大投资银行均将香港作为业务分区的重中之重，在目前同类型项目中，仅有腾飞项目提供境外投资银行工作体验与workshop。
+                      </p>
+                    </div>  
+                    <div class="intro">
+                        <h3>口碑最好</h3>
+                        <p>
+                          参加腾飞香港商业体验项目的校友中，有70%的参与者在项目结束之后自愿加入腾飞领袖俱乐部，与腾飞公司共同宣传腾飞文化。
+                        </p>
+                    </div>  
+                    <div class="intro">
+                      <h3>注重实用</h3>
+                      <p>
+                        腾飞项目邀请香港资深的HR顾问和金融高层就金融方面的人才储备及职业发展给予建议，从需求方下手，结合人才储备与职业发展方面相关的人力资源管理模块，对项目进行设计，求职workshop，投资竞赛等模块还是着重于学院的能力培养。
+                      </p>
+                    </div>
+                    <div class="intro">
+                        <h3>价格公道</h3>
+                        <p>腾飞公司通过完善的企业管理，与合作伙伴长期稳定的合作关系以及科学的成本管理，以公道的价格吸引优秀的高校精英参与腾飞香港商业体验项目。
+                        </p>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -207,7 +227,7 @@
 
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="scripts/project.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
