--- a/app/project.html
+++ b/app/project.html
@@ -86,7 +86,7 @@
                     </a>
                   </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingTwo">
+                <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
                         <p>
                              金融集团实战的所有合作方均为金融集团在港总公司。此外，带领实战演练的导师均是金融集团资深的金融专家，他们将为学员展示一个全面的环球金融职场。
