完成申请指南

--- a/app/guide.html
+++ b/app/guide.html
@@ -61,8 +61,8 @@
           <div class="col-xs-12 col-md-4">
               <div class="sidebar">
                 <a href="#step">申请步骤</a>
-                <a href="#time-cost"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>项目时间及费用</a>
-                <a href="#FAQ"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>常见问题F&Q</a>
+                <button type="button" data-toggle="modal" data-target="#time-cost"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>项目时间及费用</a>
+                <button  type="button" data-toggle="modal" data-target="#FAQ"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>常见问题F&Q</a>
               </div>
           </div>
           <!--申请指南-->
@@ -88,6 +88,88 @@
               <p>参加商业体验项目的过程中，我们将赋予参与者实实在在的责任，以团队为单位参与实际项目。</p>
             </div>
           </div>
+          <!--end-->
+          <!--费用及时间-->
+          <div class="modal fade" id="time-cost" tabindex="-1" role="dialog" aria-labelledby="time-costLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="time-costLabel">项目时间及费用</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="detail">
+                    <h4>一、请参考我们的海报或者电邮查询</h4>
+                    <p>项目申请费用：<strong>RMB500</strong></p>
+                    <p>PFP项目费用：<strong> RMB3480</strong></p>
+                    <p class="alert">*香港实习企业不收取学生任何费用</p>
+                    <h4>二、由PAL有限公司深圳办事处法定代表代收</h4>
+                    <p class="alert">*郑迪恒先生与黄灼晖先生作为腾飞策划有限公司深圳办事处的法定代表</p>
+                    <ol>
+                        <li>
+                          <p>账户名称: 郑迪恒先生</p>
+                          <p> 收款银行: 中国银行 (深圳國貿支行)</p>
+                          <p>账户号码: 6217582000005131057</p>
+                          <p class="alert">若申请者是通过银行汇款，汇款后请保留好汇款小票，并扫描备份。申请者需要通知并向PAL邮箱公司提交汇款凭证</p>
+                        </li>
+                        <li>
+                          <p>账户名称: 黄灼晖先生</p>
+                          <p>支付宝账户：isaac.w.w.w.w@gmail.com</p>
+                        </li>
+                    </ol> 
+                    <h4>三、了解更多PAL商业体验计划途径很多方法如下：</h4>
+                    <ol>
+                      <li>
+                        <p>参加你附近大学或者城市的PAL宣讲会</p>
+                      </li>
+                      <li>
+                        <p>旅游香港参观PAL有限公司</p>
+                      </li>
+                      <li>
+                        <p>与我们的校友共进午餐</p>
+                      </li> 
+                    </ol> 
+                    <h4>四、如有任何疑问,欢迎致电或者电邮</h4>
+                    <p>公司海外同一咨询电话：<a href="tel:852-37570899">（852）37570899</a></p>
+                    <p>Email：<a href="mailto:admin@palhk.co">admin@palhk.co</a></p>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">了解</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--end-->
+          <!--F&Q-->
+          <div class="modal fade" id="FAQ" tabindex="-1" role="dialog" aria-labelledby="FAQLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="FAQ">常见问题F&Q</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="detail">
+                    <h4>1、我什么时候报名比较好？</h4>
+                    <p>项目已开放申请。项目采取分批录取的形式，录满即止，请尽早提交项目申请。晚申请将有可能失去选择心仪的实习实习时间段的机会。</p>
+                    <h4>2、项目是否有年级和专业的限制？</h4>
+                    <p>我不是学商科的，是否可以申请参与项目？项目对于申请者的专业和年级没有限制。我们欢迎具有不同专业背景的学生参与到项目中来，多元化是项目的特点之一。项目学员的分布广泛，其中经济、金融和管理相关的专业只占近40%，此外还有不少理工科、新闻传媒、语言、法律等相关专业的学员参与</p>
+                    <h4>3、项目对于英文是否有要求？</h4>
+                    <p>项目对英文有一定的要求。但我们考察的重点不是学生的英文语法，而是将其视为一种沟通交流的工具，只要你敢于说出口，敢于用英语和周围人交流你的想法就可以了。在香港的企业实习， 你的工作语言以普通话为主，所以并不需要担心项目过程中你会处于一无所知的状态。</p>
+                    <h4>4、面试筛选标准是什么？</h4>
+                    <p>我们不以学生的学校背景、成绩好坏作为评定标准，主要考察的是学生是否具有上进心和团队合作精神、职业规划是否清晰、综合素质是否达标，这些都是由项目评审委员会考核的。我们筛选学生的目的：确保学生在港期间能够适应陌生和高压环境，按时完成公司的工作任务以及大学的学习任务。所以学生的申请态度以及参加项目的热情度也是很重要的考核标准。若申请者只是抱着参观游玩的心态参加，那面试一定不通过。</p>
+                    <h4>5、项目的机票、住宿、交通如何安排？</h4>
+                    <p>学员可以自行决定是否选择腾飞公司提供的旅行服务。腾飞公司的旅行服务包括:酒店、项目第一天从罗湖口岸到酒店以及从酒店到实习公司的接送。同时腾飞公司项目学员也可以选择自行预订酒店，腾飞公司可以提供必要的帮助。</p>
+                  </div>  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">了解</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--end-->
         </div>
       </div>
     </div>
