--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,13 @@
                  </div>
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">首页</a></li>
-                         <li><a href="">PFP金融项目</a></li>
+                         <li><a href="index.html">首页</a></li>
+                         <li><a href="project.html">PFP金融项目</a></li>
                          <li><a href="">PST游学项目</a></li>
-                         <li><a href="">日程安排</a></li>
+                         <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
-                         <li><a href="">申请指南</a></li>
-                         <li><a class="navbar-pal-btn" href="">在线申请</a></li>
+                         <li><a href="guide.html">申请指南</a></li>
+                         <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
                  </div>
             </div>
