--- a/app/guide.html
+++ b/app/guide.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>腾飞</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>申请指南</title>
+    <meta name="description" content="腾飞项目申请指南">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -40,13 +40,13 @@
                  </div>
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">首页</a></li>
-                         <li><a href="">PFP金融项目</a></li>
+                         <li><a href="index.html">首页</a></li>
+                         <li><a href="project.html">PFP金融项目</a></li>
                          <li><a href="">PST游学项目</a></li>
-                         <li><a href="">日程安排</a></li>
+                         <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
-                         <li><a href="">申请指南</a></li>
-                         <li><a class="navbar-pal-btn" href="">在线申请</a></li>
+                         <li><a href="guide.html">申请指南</a></li>
+                         <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
                  </div>
             </div>
