--- a/app/project.html
+++ b/app/project.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>PFP金融项目</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="腾飞PFP金融项目介绍">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -42,13 +42,13 @@
                  </div>
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">首页</a></li>
-                         <li><a href="">PFP金融项目</a></li>
+                         <li><a href="index.html">首页</a></li>
+                         <li><a href="project.html">PFP金融项目</a></li>
                          <li><a href="">PST游学项目</a></li>
-                         <li><a href="">日程安排</a></li>
+                         <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
-                         <li><a href="">申请指南</a></li>
-                         <li><a class="navbar-pal-btn" href="">在线申请</a></li>
+                         <li><a href="guide.html">申请指南</a></li>
+                         <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
                  </div>
             </div>
