--- a/app/application.html
+++ b/app/application.html
@@ -66,10 +66,6 @@
                 <label>姓名（例：张小明）*</label>
                 <input type="text" class="form-control"  placeholder="张小明">
               </div>
-              <div class="form-group">
-                <label>拼音（例：Xiaoming Zhang)*</label>
-                <input type="text" class="form-control"  placeholder="Xiaoming zhang">
-              </div>
               <label>性别*</label>
               <div class="radio">
                 <label>
@@ -83,43 +79,21 @@
                   女
                 </label>
               </div>
-              <label>地区（若无选项，请在其他中填写国籍）*</label>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                  中国大陆
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                  港澳台
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                  其他：
-                </label>
+              <div class="form-group">
+                <label>出生日期*</label>
+                <input type="text" class="form-control"  name="birthday" placeholder="1991-01-01">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control"  name="place">
+                <label>学校*</label>
+                <input type="text" class="form-control"  name="phone">
               </div>
               <div class="form-group">
-                <label>年龄*</label>
-                <input type="number" class="form-control"  name="age">
+                <label>专业*</label>
+                <input type="text" class="form-control"  name="phone">
               </div>
               <div class="form-group">
-                <label>生日*</label>
-                <input type="text" class="form-control"  name="birthday">
-              </div>
-              <div class="form-group">
-                <label>学生证号码</label>
-                <input type="text" class="form-control"  name="idcard">
-              </div>
-              <div class="form-group">
-                <label>身份证号码*</label>
-                <input type="text" class="form-control"  name="idcard">
+                <label>年级*</label>
+                <input type="text" class="form-control"  name="phone">
               </div>
               <div class="form-group">
                 <label>手机*</label>
@@ -134,25 +108,21 @@
                 <input type="text" class="form-control"  name="phone">
               </div>
               <div class="form-group">
-                <label>学校*</label>
+                <label>推荐人</label>
                 <input type="text" class="form-control"  name="phone">
               </div>
               <div class="form-group">
-                <label>年级*</label>
-                <input type="text" class="form-control"  name="phone">
+                <label>身份证号码*</label>
+                <input type="text" class="form-control"  name="idcard">
               </div>
               <div class="form-group">
-                <label>联系地址*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>紧急联系人*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>紧急联系人号码*</label>
+                <label>家长联系方式*</label>
                 <input type="tel" class="form-control"  name="phone">
               </div>
+              <label>个人经历（校内外）</label>
+              <textarea class="form-control" rows="8"></textarea>
+              <label>个人获奖情况（校内外）</label>
+              <textarea class="form-control" rows="8"></textarea>
                <button type="submit" class="btn btn-default">提交</button>
             </form>
         </div>
