--- a/app/schedule.html
+++ b/app/schedule.html
@@ -42,8 +42,8 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="project.html">PFP金融项目</a></li>
-                         <li><a href="">PST游学项目</a></li>
+                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
                          <li><a href="guide.html">申请指南</a></li>
@@ -57,104 +57,249 @@
     <!--内容区-->
     <div class="content">
       <div class="container">
-        <div class="section">
-          <h3>Schedule</h3>
-        </div>
-        <!--日程表-->
-        <div class="schedule">
-          <table class="table table-bordered">
-            <caption><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>Time Distribution
-              <div class="row">
-                  <div class="col-xs-6 col-md-2">
-                    <div class="scale-block schedule-business">
-                      五百强时间
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-2">
-                    <div class="scale-block schedule-team">
-                      团队时间
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-2">
-                    <div class="scale-block schedule-company">
-                      公司时间
-                    </div>
-                  </div>
-                  <div class="col-xs-6 col-md-2">
-                    <div class="scale-block schedule-free">
-                      自由时间
-                    </div>
-                  </div>
-              </div>
-
-            </caption>
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>上午</th>
-                <th>下午</th>
-                <th>晚上</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>第一天</td>
-                <td class="schedule-default">赴港</td>
-                <td class="schedule-default">赴港</td>
-                <td class="schedule-team">腾飞培训</td>
-              </tr>
-              <tr>
-                <td>第二天</td>
-                <td class="schedule-business">五百强培训</td>
-                <td class="schedule-company">企业实习</td>
-                <td class="schedule-team">团队分工</td>
-              </tr>
-              <tr>
-                <td>第三天</td>
-                <td class="schedule-business">五百强培训</td>
-                <td class="schedule-company">企业实习</td>
-                <td class="schedule-team">团队分工</td>
-              </tr>
-              <tr>
-                <td>第四天</td>
-                <td class="schedule-business">五百强培训</td>
-                <td class="schedule-company">企业实习</td>
-                <td class="schedule-team">市场调查</td>
-              </tr>
-              <tr>
-                <td>第五天</td>
-                <td class="schedule-company">投资竞赛</td>
-                <td class="schedule-company">分享会</td>
-                <td class="schedule-team">商业预演</td>
-              </tr>
-              <tr>
-                <td>第六天</td>
-                <td class="schedule-company">商策比赛</td>
-                <td class="schedule-company">颁奖典礼</td>
-                <td class="schedule-team">团队聚会</td>
-              </tr>
-              <tr>
-                <td>第七天</td>
-                <td class="schedule-free">自由活动</td>
-                <td class="schedule-free">自由活动</td>
-                <td class="schedule-free">离开香港</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <!--end-->
         <!--酒店-->
-        <div class="section">
-          <h3>Hotel</h3>
-        </div>
-        <div class="link">
-          <div class="row">
-            <div class="col-xs-12 col-md-4">
-              <a href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>入住酒店</a>
+         <div class="section">
+            <h3>Hotel</h3>
+          </div>
+         <div class="link">
+            <div class="row">
+              <div class="col-xs-12 col-md-4">
+                <a href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>入住酒店</a>
+              </div>
             </div>
           </div>
-        </div>
         <!--end-->
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+              <div class="section">
+                <h3>PFP&Schedule(Day 1-7)</h3>
+              </div>
+              <!--日程表-->
+              <div class="schedule">
+                <table class="table table-bordered">
+                  <caption><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>Time Distribution
+                    <div class="row">
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pfp-business">
+                            五百强时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pfp-team">
+                            团队时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pfp-company">
+                            公司时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pfp-free">
+                            自由时间
+                          </div>
+                        </div>
+                  </caption>
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>上午</th>
+                      <th>下午</th>
+                      <th>晚上</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Day 1</td>
+                      <td class="pfp-default">赴港</td>
+                      <td class="pfp-default">赴港</td>
+                      <td class="pfp-team">腾飞培训</td>
+                    </tr>
+                    <tr>
+                      <td>Day 2</td>
+                      <td class="pfp-business">五百强培训</td>
+                      <td class="pfp-company">企业实习</td>
+                      <td class="pfp-team">团队分工</td>
+                    </tr>
+                    <tr>
+                      <td>Day 3</td>
+                      <td class="pfp-business">五百强培训</td>
+                      <td class="pfp-company">企业实习</td>
+                      <td class="pfp-team">团队分工</td>
+                    </tr>
+                    <tr>
+                      <td>Day 4</td>
+                      <td class="pfp-business">五百强培训</td>
+                      <td class="pfp-company">企业实习</td>
+                      <td class="pfp-team">市场调查</td>
+                    </tr>
+                    <tr>
+                      <td>Day 5</td>
+                      <td class="pfp-company">投资竞赛</td>
+                      <td class="pfp-company">分享会</td>
+                      <td class="pfp-team">商业预演</td>
+                    </tr>
+                    <tr>
+                      <td>Day 6</td>
+                      <td class="pfp-company">商策比赛</td>
+                      <td class="pfp-company">颁奖典礼</td>
+                      <td class="pfp-team">团队聚会</td>
+                    </tr>
+                    <tr>
+                      <td>Day 7</td>
+                      <td class="pfp-free">自由活动</td>
+                      <td class="pfp-free">自由活动</td>
+                      <td class="pfp-free">离开香港</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--end-->
+          </div>
+          <div class="col-xs-12 col-md-6">
+              <div class="section">
+                <h3>PST&Schedule Day(1-15)</h3>
+              </div>
+              <!--日程表-->
+              <div class="schedule">
+                <table class="table table-bordered">
+                  <caption><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>Time Distribution
+                    <div class="row">
+                      <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pst-internship">
+                            投行时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pst-teaching">
+                            大学时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pst-company">
+                            公司时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pst-business">
+                            企业时间
+                          </div>
+                        </div>
+                        <div class="col-xs-6 col-md-2">
+                          <div class="scale-block pst-free">
+                            自由时间
+                          </div>
+                        </div>
+                       
+                    </div>
+
+                  </caption>
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>上午</th>
+                      <th>下午</th>
+                      <th>晚上</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Day 1</td>
+                      <td class="pst-default">赴美教程第一阶段（东岸）</td>
+                      <td class="pst-business">PST培训</td>
+                      <td class="pst-business">PST培训</td>
+                    </tr>
+                    <tr>
+                      <td>Day 2</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-team">团队分工</td>
+                    </tr>
+                    <tr>
+                      <td>Day 3</td>
+                      <td class="pst-internship">投行实行</td>
+                      <td class="pst-internship">投行实行</td>
+                      <td class="pst-team">团队工作</td>
+                    </tr>
+                    <tr>
+                      <td>Day 4</td>
+                      <td class="pst-internship">投行实行</td>
+                      <td class="pst-internship">投行实行</td>
+                      <td class="pst-company">市场调查</td>
+                    </tr>
+                    <tr>
+                      <td>Day 5</td>
+                      <td class="pst-company">投资竞赛</td>
+                      <td class="pst-company">走访华尔街</td>
+                      <td class="pst-company">市场调查</td>
+                    </tr>
+                    <tr>
+                      <td>Day 6</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-team">团队工作</td>
+                    </tr>
+                    <tr>
+                      <td>Day 7</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-team">团队工作</td>
+                    </tr>
+                     <tr>
+                      <td>Day 8</td>
+                      <td class="pst-teaching">大学教授课程</td>
+                      <td class="pst-free">参访联合国，自由女神</td>
+                      <td class="pst-company">商业预演</td>
+                    </tr>
+                     <tr>
+                      <td>Day 9</td>
+                      <td class="pst-company">商策比赛</td>
+                      <td class="pst-team">结业礼</td>
+                      <td class="pst-team">团队聚会</td>
+                    </tr>
+                     <tr>
+                      <td>Day 10</td>
+                      <td class="pst-free">自由活动</td>
+                      <td class="pst-default">离开美国(东岸)</td>
+                      <td class="pst-default">离开美国(东岸)</td>
+                    </tr>
+                     <tr>
+                      <td>Day 11</td>
+                      <td class="pst-default">教程第二阶段（西岸）</td>
+                      <td class="pst-free">自由活动</td>
+                      <td class="pst-free">自由活动</td>
+                    </tr>
+                     <tr>
+                      <td>Day 12</td>
+                      <td class="pst-company">名企观摩</td>
+                      <td class="pst-company">名企观摩</td>
+                      <td class="pst-team">团队分工</td>
+                    </tr>
+                     <tr>
+                      <td>Day 13</td>
+                       <td class="pst-company">名企观摩</td>
+                      <td class="pst-company">名企观摩</td>
+                      <td class="pst-team">创业预演</td>
+                    </tr>
+                     <tr>
+                      <td>Day 14</td>
+                       <td class="pst-company">五百强培训</td>
+                      <td class="pst-company">社会企业比赛</td>
+                      <td class="pst-team">团队聚会</td>
+                    </tr>
+                     <tr>
+                      <td>Day 15</td>
+                      <td class="pst-free">自由活动</td>
+                      <td class="pst-default">离开美国（西岸）</td>
+                      <td class="pst-default">离开美国（西岸）</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--end-->
+          </div>
+        </div>
+        
       </div>
     </div>
 
