--- a/app/application.html
+++ b/app/application.html
@@ -42,8 +42,8 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="project.html">PFP金融项目</a></li>
-                         <li><a href="">PST游学项目</a></li>
+                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
                          <li><a href="guide.html">申请指南</a></li>
@@ -62,8 +62,27 @@
         </div>
         <div class="application">
             <form>
+              <label>申请项目*</label>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="pro"  value="option1">
+                  PFP金融实习
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="pro"  value="option2">
+                  PST游学项目
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="pro"  value="option2">
+                  留学申请服务
+                </label>
+              </div>
               <div class="form-group">
-                <label>姓名（例：张小明）*</label>
+                <label>姓名*（例：张小明）*</label>
                 <input type="text" class="form-control"  placeholder="张小明">
               </div>
               <label>性别*</label>
@@ -100,7 +119,7 @@
                 <input type="tel" class="form-control"  name="phone">
               </div>
               <div class="form-group">
-                <label>E-mail*</label>
+                <label>E-mail*（用于收发录取信息，须填写常用邮箱）</label>
                 <input type="email" class="form-control"  name="phone">
               </div>
               <div class="form-group">
