--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,8 @@
                  <div id="navbar" class="navbar-collapse collapse" >
                       <ul class="nav navbar-nav navbar-right">
                          <li><a href="index.html">首页</a></li>
-                         <li><a href="project.html">PFP金融项目</a></li>
-                         <li><a href="">PST游学项目</a></li>
+                         <li><a href="pfp.html">PFP金融项目</a></li>
+                         <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
                           <li><a href="">留学申请</a></li>
                          <li><a href="guide.html">申请指南</a></li>
