--- a/app/guide.html
+++ b/app/guide.html
@@ -61,7 +61,7 @@
           <div class="col-xs-12 col-md-4">
               <div class="sidebar">
                 <a href="#step">申请步骤</a>
-                <button type="button" data-toggle="modal" data-target="#time-cost"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>项目时间及费用</a>
+                <button type="button" data-toggle="modal" data-target="#time-cost"><span class="glyphicon glyphicon-yen" aria-hidden="true"></span>项目费用明细</a>
                 <button  type="button" data-toggle="modal" data-target="#FAQ"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>常见问题F&Q</a>
               </div>
           </div>
@@ -73,35 +73,49 @@
             <div class="step-content">
               <h4>Step1：提交申请</h4>
               <p>1） 透过校园大使或推荐人申请</p>
-              <p>2） 邮件申请：以“APPLY FOR PFP”为邮件主题发送至<a href="mailto:admin@palhk.co">admin@palhk.co</a></p>
+              <p>2） 邮件申请：以“APPLICATION”为邮件主题发送至<a href="mailto:admin@palhk.co">admin@palhk.co</a></p>
               <h4>Step2：缴纳项目申请费</h4>
-              <p>申请者通过审核，需在两个工作日内向PAL提交人民币伍佰元（<strong>RMB500</strong>）或者其它等值外币作为项目申请费。</p>
+              <p>申请者通过审核，需在两个工作日内向PAL提交人民币玖佰捌拾元（<strong>RMB980</strong>）或者其它等值外币作为项目申请费。</p>
               <p class="alert">注意：若申请者未能通过项目申请审批，申请费用将全额退还；若申请者中途退出或因个人理由终止申请，该申请费用将不予退还。</p>
               <h4>Step3：电话面试</h4>
-              <p>申请者缴纳申请费用后，项目评审委员会将对申请者进行电话面试，考核其综合素质和能力</p>
+              <p>申请者缴纳申请费用后，项目评审委员会将对申请者进行电话面试，考核其综合素质和能力。</p>
               <p class="alert">（注意：考核不通过，申请费用全额退还。）</p>
               <h4>Step4：录取通知</h4>
               <p>如果申请者成功通过面试并且公司认为该申请者将会对商业体验项目做出积极贡献，PAL就会向你发出录取通知书。</p>
               <h4>Step5：缴纳项目费用</h4>
-              <p>收到录取通知之后，申请者需向PAL缴纳项目申请费用。商业体验项目费用为人民币叁仟肆佰捌拾元（<strong>RMB3480</strong>），费用主要为教师及设备使用费、教材费、讲师课酬、私人银行基金经理费、企业商业策划比赛评审费，商业体验项目评审委员会针对每个参与者的项目鉴定费以及PAL公司行政费用。</p>
+              <p>收到录取通知之后，申请者需向PAL缴纳项目申请费用，费用主要为教师及设备使用费、教材费、讲师课酬、私人银行基金经理费、企业商业策划比赛评审费，商业体验项目评审委员会针对每个参与者的项目鉴定费以及PAL公司行政费用。</p>
               <h4>Step6：向前迈进</h4>
               <p>参加商业体验项目的过程中，我们将赋予参与者实实在在的责任，以团队为单位参与实际项目。</p>
             </div>
           </div>
           <!--end-->
-          <!--费用及时间-->
+          <!--项目费用-->
           <div class="modal fade" id="time-cost" tabindex="-1" role="dialog" aria-labelledby="time-costLabel">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="time-costLabel">项目时间及费用</h4>
+                  <h4 class="modal-title" id="time-costLabel">项目费用明细</h4>
                 </div>
                 <div class="modal-body">
                   <div class="detail">
-                    <h4>一、请参考我们的海报或者电邮查询</h4>
-                    <p>项目申请费用：<strong>RMB500</strong></p>
-                    <p>PFP项目费用：<strong> RMB3480</strong></p>
+                    <h4>一、费用总览（请参考我们的海报或者电邮查询）</h4>
+                    <h5>PFP金融实习项目费用明细</h5>
+                    <p>申请费用：<strong>RMB</strong></p>
+                    <p>项目费用：<strong>RMB</strong></p>
+                    <p>住宿费用：<strong>RMB</strong></p>
+                    <p>其他费用：<strong>RMB</strong></p>
+                    <p>优惠活动：<strong>RMB</strong></p>
+                    <h5>PST游学项目费用明细</h5>
+                    <p>申请费用：<strong>RMB</strong></p>
+                    <p>项目费用：<strong>RMB</strong></p>
+                    <p>住宿费用：<strong>RMB</strong></p>
+                    <p>其他费用：<strong>RMB</strong></p>
+                    <p>优惠活动：<strong>RMB</strong></p>
+                    <h5>留学服务项目</h5>
+                    <p>项目费用：<strong>RMB</strong></p>
+                    <p>其他费用：<strong>RMB</strong></p>
+                    <p>优惠活动：<strong>RMB</strong></p>
                     <p class="alert">*香港实习企业不收取学生任何费用</p>
                     <h4>二、由PAL有限公司深圳办事处法定代表代收</h4>
                     <p class="alert">*郑迪恒先生与黄灼晖先生作为腾飞策划有限公司深圳办事处的法定代表</p>
