添加news页，修改文章组件

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -64,7 +64,7 @@
          <div class="link">
             <div class="row">
               <div class="col-xs-12 col-md-4">
-                <a href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>入住酒店</a>
+                <a class="link-default" href="http://www.ibis.com/gb/hotel-7606-ibis-hong-kong-central-and-sheung-wan/index.shtml"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>入住酒店</a>
               </div>
             </div>
           </div>
@@ -155,6 +155,9 @@
                 </table>
               </div>
               <!--end-->
+              <div class="link">
+                <a  class="link-pfp" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PFP金融项目日程安排.doc</a>
+              </div>
           </div>
           <div class="col-xs-12 col-md-6">
               <div class="section">
@@ -297,6 +300,9 @@
                 </table>
               </div>
               <!--end-->
+              <div class="link">
+                <a  class="link-pst" href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>PST游学项目日程安排.doc</a>
+              </div>
           </div>
         </div>
         
