--- a/app/guide.html
+++ b/app/guide.html
@@ -44,7 +44,7 @@
                          <li><a href="pfp.html">PFP金融项目</a></li>
                          <li><a href="pst.html">PST游学项目</a></li>
                          <li><a href="schedule.html">日程安排</a></li>
-                          <li><a href="">留学申请</a></li>
+                          <li><a href="studyabroad.html">留学申请</a></li>
                          <li><a href="guide.html">申请指南</a></li>
                          <li><a class="navbar-pal-btn" href="application.html">在线申请</a></li>
                       </ul>
