--- a/app/studyabroad.html
+++ b/app/studyabroad.html
@@ -2,9 +2,10 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>申请报名表</title>
-    <meta name="description" content="腾飞项目报名表">
+    <title>留学申请</title>
+    <meta name="description" content="留学申请">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0,user-scalable=no" id="viewport">
+
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,8 +14,8 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/application.css -->
-    <link rel="stylesheet" href="styles/application.css">
+    <!-- build:css(.tmp) styles/studyabroad.css -->
+    <link rel="stylesheet" href="styles/studyabroad.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -26,7 +27,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-      <!--header nav-->
+  <!--header nav-->
     <div class="header">
         <div class="navbar  navbar-default navbar-fixed-top">
             <div class="container">
@@ -54,100 +55,32 @@
         </div>
     </div>
 
-    <!--Application-->
+    <!--内容区-->
     <div class="content">
       <div class="container">
-        <div class="section">
-          <h3>Application Form</h3>
-        </div>
-        <div class="application">
-            <form>
-              <label>申请项目*</label>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="pro"  value="option1">
-                  PFP金融实习
-                </label>
+          <!--图区，广告-->
+          <div class="pic">
+            <img src="images/wall.jpg" alt="">
+            <!--文字广告区,>1200可见-->
+            <div class="mask tmp-hide visible-lg-block">
+              <div class="slogan">
+                  <h1 id="slogan-1" class="slogan-color-1 tmp-hide">999元就圆留学梦</h1>
+                  <h1 id="slogan-2" class="slogan-color-2 tmp-hide">1999元全球各地任你选</h1>
+                  <h1 id="slogan-3" class="slogan-color-3 tmp-hide">腾飞平价留学，全国独家首创</h1>
+                  <div class="slogan-detail tmp-hide">
+                    <p>每年，都有91%的学生无缘心仪大学</p>
+                    <p>每年，都有24%的学生因为漏洞百出的文书被高校拒之门外</p>
+                    <p>腾飞，给你一个不一样的留学之旅！</p>
+                  </div>
               </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="pro"  value="option2">
-                  PST游学项目
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="pro"  value="option2">
-                  留学申请服务
-                </label>
-              </div>
-              <div class="form-group">
-                <label>姓名*（例：张小明）*</label>
-                <input type="text" class="form-control"  placeholder="张小明">
-              </div>
-              <label>性别*</label>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-                  男
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                  女
-                </label>
-              </div>
-              <div class="form-group">
-                <label>出生日期*</label>
-                <input type="text" class="form-control"  name="birthday" placeholder="1991-01-01">
-              </div>
-              <div class="form-group">
-                <label>学校*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>专业*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>年级*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>手机*</label>
-                <input type="tel" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>E-mail*（用于收发录取信息，须填写常用邮箱）</label>
-                <input type="email" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>微信*</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>推荐人</label>
-                <input type="text" class="form-control"  name="phone">
-              </div>
-              <div class="form-group">
-                <label>身份证号码*</label>
-                <input type="text" class="form-control"  name="idcard">
-              </div>
-              <div class="form-group">
-                <label>家长联系方式*</label>
-                <input type="tel" class="form-control"  name="phone">
-              </div>
-              <label>个人经历（校内外）</label>
-              <textarea class="form-control" rows="8"></textarea>
-              <label>个人获奖情况（校内外）</label>
-              <textarea class="form-control" rows="8"></textarea>
-               <button type="submit" class="btn btn-default">提交</button>
-            </form>
-        </div>
+            </div>
+          </div>
+          <div class="section">
+            <h3>留学考试</h3>
+          </div>
       </div>
     </div>
-    <!--end-->
+
      <!--底部-->
     <div class="footer">
       <div class="container">
@@ -158,7 +91,7 @@
           UNIT 1104A，11/F，KAI TAK COMM. BLDG. 317-319 DES VOEUX ROAD, CENTRAL, HONG KONG<br>
           香港上环德辅路中317-319号启德商业大厦11楼1104A室<br>
         </address>
-         <!--微信公共号-->
+        <!--微信公共号-->
         <address>
           <strong><span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>WeChat ID</strong><br>
           pal-hk<br>
@@ -180,14 +113,16 @@
 
       </div>
     </div>
+
+
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
-
+  
     <!-- build:js(.) scripts/plugins.js -->
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
@@ -202,8 +137,9 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
-
-
+    <!-- build:js(.) scripts/studyabroad.js -->
+    <script src="scripts/studyabroad.js"></script>
+    <!--endbuild-->
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
